--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reactjs-demos",
   "version": "0.1.0",
+  "homepage": "https://ittphanthetuan.github.io/test-demo",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
@@ -65,6 +66,8 @@
     "autoprefixer": "10.4.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
@@ -145,5 +148,8 @@
         false
       ]
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
